--- a/_posts/2015-8-22-How-to-BG.md
+++ b/_posts/2015-8-22-How-to-BG.md
@@ -4,7 +4,7 @@ hero_image: skata.png
 ---
 If you are a freelance or contractor developer in Greece and still operate via a Greek legal business entity you're doing it wrong. Around sixty thousand Greek companies serving various industries have already relocated to Bulgaria. And there is good reason.
 
-## Why relocate your business to Bulgaria?
+### Why relocate your business to Bulgaria?
 Unfortunately, Greece always had a very hostile attitude towards self-employment. Actually that holds true for all sorts of SMEs. The primary reason, as you probably already have discovered, is that the underlying business-supporting frameworks are complicated, bloated with lengthy and costly bureaucratic procedures and change at a rapid pace. Not to mention taxation. Greek government has always been your equally-privileged business partner, sucking up as high as 50% of your annual income to sustain its miserably organized public sector. Being a freelancer in Greece comes along with some, but not limited to those, "perks":
 - No tax deduction privileges similar to those employed by a business
 - No tax deduction privileges for collecting receipts
@@ -23,42 +23,46 @@ Enter Bulgaria. Our northern neighbours who appear to be smarter than us in term
 
 It's simpler and cost effective. And if you're in the services business it's the reasonable thing to do. Relocate to Bulgaria.
 
-## How to setup a legal business entity in Bulgaria (The Ltd. case)
-1. ###Find an "agent"
+### How to setup a legal business entity in Bulgaria (The Ltd. case)
+1. ###Find an agent
 
     Find an agent. You get at least 3-5 pages of Google results for "establish company in Bulgaria". These are actually accounting offices but I call them agents because they take you by the hand and guide you through the whole process. You literally just have to be there, stand by their side and occasionally sign some stuff. In some cases you might not want to even do that, but more on that later.
 
     The criteria to choose an agent, at least in my terms are three: a) cost, b) location c) communication and d) legitimacy.
 
-    1. ####Cost
+   #####Cost
+
     Cost means two things. How much is the fee they demand to establish the company for you and how much is their monthly fee for handling your company's accounting. The "establishment" fee varies from 600€ to 1500€. The monthly "monitoring" varies from around 60€ to 150€. To my experience you shouldn't pay more than 700€ for the one-time company establishment fee and no more than 80€/month for accounting services if you issue 4-5 invoices per month.
-    2. ####Location
+  #####Location
     Although it's possible to setup the company entirely without ever stepping foot on Bulgarian soil, I wouldn't advise you to go down that road. The reason being, you have to give a full-administrative proxy to your "agent" and as you can understand this may come with some risks. You may be willing to take those. I wasn't.
     So you'll need to get your foot on Bulgarian soil. And you have to do that for three times in total so that's why you have to choose a Bulgarian city that is most convenient for you to visit. Most prominent choices:
-        - Sofia. Five-six hour drive from Thessaloniki. Three hour flight.
-        - Petrich. 1h 40min drive from Thessaloniki. No airport.
-        - Sandanski. 2h drive from Thessaloniki. No airport.
-        - Blagoevgrad. ~3h drive from Thessaloniki. No airport.
-    Whatever city you choose, you'll have to be there three times:
-        1. Company Establishment
-        2. Collect your company's stamp and open bank accounts
-        3. Collect your E-banking token and debit cards
-    3. ####Communication
+
+    - Sofia. Five-six hour drive from Thessaloniki. Three hour flight.
+    - Petrich. 1h 40min drive from Thessaloniki. No airport.
+    - Sandanski. 2h drive from Thessaloniki. No airport.
+    - Blagoevgrad. ~3h drive from Thessaloniki. No airport.
+
+    <br>Whatever city you choose, you'll have to be there three times:
+     1. Company Establishment
+     2. Collect your company's stamp and open bank accounts
+     3. Collect your E-banking token and debit cards
+
+   #####Communication
     We're developers and we're used to conduct business over the internet. So in your quest of finding your "agent" ask them if they're familiar conducting business over the Internet. How you will be sending them invoices, how you will communicate with them when and if needed etc. Fortunately, most of the "agencies" are quite modernized but always ask details and make sure they can comply with your style. Not to mention they should be at least fluent in English language. Most of them, at least in the southern region (Petrich, Belgoevgrad) also speak Greek. Some of them are even native Greeks. The latter, in most cases are also certified accountants in Greece. This can be helpful if you want consultation on how to handle delicate things regarding taxation and money transfering from your Bulgarian account to a Greek account or any other complicated issue.
-    4. ####Legitimacy
+    #####Legitimacy
     Bulgarians are not very famous for their honesty. But again, neither are Greeks. So be careful which "agent" you will decide to do business with, whether he be Bulgarian or Greek. Although I've never heard of any extreme incidents of fishy things happening it's always good to play safe with such things. It's your business we're talking about.
 
     Your best bet is to go for someone who was referred to you. But still, make a personal meeting with him and decide if he conveys trust for yourself. I feel confident referring someone to you, feel free to contact me.
 
-2. ###Before your first visit to Bulgaria
+2. ####Before your first visit to Bulgaria
 
     After you find your trusted "agent", you will need to send him two things (by email):
     - The name of your Bulgarian company you want to establish.
     - A photocopy of your identification card.  
 
-    They will prepare the initial documents and within a week you'll have to be in their office in Bulgaria.
+    <br>They will prepare the initial documents and within a week you'll have to be in their office in Bulgaria.
 
-3. ###Your first time in Bulgaria. Yeay!
+3. ####Your first time in Bulgaria. Yeay!
 
     *Skip this paragraph if you go there by plane or bus.*
 
@@ -67,11 +71,11 @@ It's simpler and cost effective. And if you're in the services business it's the
     - From that point onwards, you switch your car lights on and *always* drive anywhere with them on.
     - Upon entering Bulgaria you'll need to buy a Vignette sticker and stick it on your windshield. They normally cost 5 euro and last for 7 days. You can buy a Vignette from a little shop on the right, 200m after the border crossing or any gas-station. Most Vignette sellers will try to rip another 2€-3€ from you if they find you're a first-comer from Greece.
 
-    A few minutes later you're at your "agency's" office and ready to roll. One of the people working there will jump ship on your car and you will drive to the nearest bank to deposit your company's founding capital. This is normally around 100-250€ which you can withdraw when the company is fully established. The bank to which you'll deposit this money is usually the one with the lowest cost of opening and account and not necessarily the bank you will conduct business with. The only thing you'll need to do at the bank is show your ID to the clerk. Your agency will do the talking. More on banks later.
+    <br>A few minutes later you're at your "agency's" office and ready to roll. One of the people working there will jump on your car and you will drive to the nearest bank to deposit your company's founding capital. This is normally around 100-250€ which you can withdraw when the company is fully established. The bank to which you'll deposit this money is usually the one with the lowest cost of opening and account and not necessarily the bank you will conduct business with. The only thing you'll need to do at the bank is show your ID to the clerk. Your agency will do the talking. More on banks later.
 
-    A few minutes later, you'll be back at the "agency's" office and you'll be signing papers. After that you'll be done and you'll drive back home. Total time spent in Bulgaria will be 1-1.5hrs tops.
+    When all this is done, you'll be back at the "agency's" office and you'll be signing papers. After that you'll be done and you'll drive back home. Total time spent in Bulgaria will be 1-1.5hrs tops.
 
-4. ###Your second time in Bulgaria. Look mom, I got my stamp!
+4. ####Your second time in Bulgaria. Look mom, I got my stamp!
 
     In less than 10 days, your agent will call you to let you know that your company has been established. You'll then have to drive to Bulgaria again and visit your "agent's" office who will happily hand you over your company's official stamp! At this point your company will be an officially registered Bulgarian legal entity and your VAT will be valid and listed (people will be able to verify it via online tools etc). You're essentially ready to conduct business! But wait, you need bank accounts!
 
@@ -80,7 +84,7 @@ It's simpler and cost effective. And if you're in the services business it's the
     - There might be fees for cross-border money wirings. Some have none. Some have 0.1%.
     - They have fees and commissions for money withdrawal from ATMs abroad (2.5€ to 3.5€ fee. 1.5% to 3.5% commission). More on why that matters later.
 
-    According to your needs you need to research which bank best suits your needs. This is something that you have to do. It's not your agent's job although he might be able to consult you appropriately according to your business. Unicredit is one of the "safest" ones. FiBank is one of the cheapest ones. You will also need to research whether the bank has a branch in your chosen location because you'll need to be physically present there. Two times. (FiBank and Unicredit are both available in Petrich). I'd also suggest not to go for a Greek-Bulgarian bank (Postbank/Eurobank, Pireus etc) the reason being that you don't want anything to do with the Greek banking system for various reasons I am not going to mention but you might be smart enough to figure out.
+    <br>According to your needs you need to research which bank best suits your needs. This is something that you have to do. It's not your agent's job although he might be able to consult you appropriately according to your business. Unicredit is one of the "safest" ones. FiBank is one of the cheapest ones. You will also need to research whether the bank has a branch in your chosen location because you'll need to be physically present there. Two times. (FiBank and Unicredit are both available in Petrich). I'd also suggest not to go for a Greek-Bulgarian bank (Postbank/Eurobank, Pireus etc) the reason being that you don't want anything to do with the Greek banking system for various reasons I am not going to mention but you might be smart enough to figure out.
 
     Back to procedure. Your "agent's" assistant again escorts you to the bank you deposited your founding capital. You close your account there and withdraw the founding capital. Then you go to your bank of choice with your "agent's" assistant and open your company accounts and apply for your e-banking account.
 
@@ -88,7 +92,7 @@ It's simpler and cost effective. And if you're in the services business it's the
     - USD or EUR account for making business with companies in the US or EU, according to what suits you better.
     - A BGN (Bulgary's currency) you will use to pay your taxes and any other expenses might ocassinally arise.
 
-    You might want to deposit your founding capital split into these accounts. The bank will withdraw the "maintainance fees"
+    <br>You might want to deposit your founding capital split into these accounts. The bank will withdraw the "maintainance fees"
     each month so each account needs to always have some money in it.
 
     You will need to have on you:
@@ -96,13 +100,13 @@ It's simpler and cost effective. And if you're in the services business it's the
     - Your company's official stamp.
     - Your identification card.
 
-    Total time spent will be around 2 hours. You'll then drive back home again and wait 3-4 business days for your debit cards and e-banking account to be issued.
+    <br>Total time spent will be around 2 hours. You'll then drive back home again and wait 3-4 business days for your debit cards and e-banking account to be issued.
 
-5. ###Last time in Bulgaria. Ready to roll!
+5. ####Last time in Bulgaria. Ready to roll!
 
     This is the simplest step. You just go to the bank and collect your cards and e-banking account with your identification card. Thank your agent, get back home and start doing what you do better. Pump some code.
 
-#### Operating your business
+### Operating your business
 
 #### **DISCLAIMER**
 
