formatting and editing

--- a/_posts/2015-8-22-How-to-BG.md
+++ b/_posts/2015-8-22-How-to-BG.md
@@ -1,22 +1,17 @@
 ---
 layout: post
-hero_image: skata.png
+post_image: bulgaria.png
+title: How to relocate your freelancing business to Bulgaria
 ---
 If you are a freelance or contractor developer in Greece and still operate via a Greek legal business entity you're doing it wrong. Around sixty thousand Greek companies serving various industries have already relocated to Bulgaria. And there is good reason.
 
 ### Why relocate your business to Bulgaria?
-Unfortunately, Greece always had a very hostile attitude towards self-employment. Actually that holds true for all sorts of SMEs. The primary reason, as you probably already have discovered, is that the underlying business-supporting frameworks are complicated, bloated with lengthy and costly bureaucratic procedures and change at a rapid pace. Not to mention taxation. Greek government has always been your equally-privileged business partner, sucking up as high as 50% of your annual income to sustain its miserably organized public sector. Being a freelancer in Greece comes along with some, but not limited to those, "perks":
-- No tax deduction privileges similar to those employed by a business
-- No tax deduction privileges for collecting receipts
-- A certain amount for each invoice is withheld and in most cases returning it is delayed
-- You're taxation is calculated in a different scale and always starting from your first 1€ of income
-- Taxing and regulation system is so complicated you have no other choice to pay for an accountant to consult you. Their fees are not a total deal-breaker but they're significant.
-- You pay 25% tax on income and a ton of other extra fees here and there
-- You pay 23% VAT
-- You have very high insurance fees, especially if you are an engineer
+Unfortunately, Greece always had a very hostile attitude towards self-employment. Actually that holds true for all sorts of SMEs. The primary reason, as you probably already have discovered, is that the underlying business-supporting frameworks are complicated, bloated with lengthy and costly bureaucratic procedures and change at a rapid pace. Not to mention taxation. Greek government has always been your equally-privileged business partner, sucking up as high as 50% of your annual income to sustain its miserably organized public sector.
 
-Enter Bulgaria. Our northern neighbours who appear to be smarter than us in terms of how they try to attract and nurture entrepreneurship. By moving your freelance/contracting business to Bulgaria you're instantly looking at a ~20% increase of your income. Here are your obligations to the Bulgarian government as Limited business entity who offers services:
+Enter Bulgaria. Our northern neighbours who appear to be smarter in terms of how they try to attract and nurture entrepreneurship. By moving your freelance/contracting business to Bulgaria you're instantly looking at a ~15% increase of your income. Here are your obligations to the Bulgarian government as a Limited business entity who sells services:
+
 - You pay 10% tax. Flat. Done.
+- 20% VAT for your EU invoices. 0% for doing bussiness with the US.
 - You pay 70€/month for insurance (only if you're not insured in another EU country)
 - You pay 150€/year for your tax-form submission
 - You pay a low fee per month to an accountant
@@ -24,18 +19,19 @@ Enter Bulgaria. Our northern neighbours who appear to be smarter than us in term
 It's simpler and cost effective. And if you're in the services business it's the reasonable thing to do. Relocate to Bulgaria.
 
 ### How to setup a legal business entity in Bulgaria (The Ltd. case)
-1. ###Find an agent
+1. ####Find an agent
 
-    Find an agent. You get at least 3-5 pages of Google results for "establish company in Bulgaria". These are actually accounting offices but I call them agents because they take you by the hand and guide you through the whole process. You literally just have to be there, stand by their side and occasionally sign some stuff. In some cases you might not want to even do that, but more on that later.
+    You get at least 3-5 pages of Google results for "establish company in Bulgaria". These are actually accounting offices but I call them "agents" because they literally take you by the hand and guide you through the whole process. You just have to be physically there, stand by their side and occasionally sign some stuff. In some cases you might not want to even do that, but more on that later.
 
-    The criteria to choose an agent, at least in my terms are three: a) cost, b) location c) communication and d) legitimacy.
+    The criteria to choose an "agent", at least in my terms are four: a) cost, b) location c) communication and d) legitimacy.
 
    #####Cost
 
-    Cost means two things. How much is the fee they demand to establish the company for you and how much is their monthly fee for handling your company's accounting. The "establishment" fee varies from 600€ to 1500€. The monthly "monitoring" varies from around 60€ to 150€. To my experience you shouldn't pay more than 700€ for the one-time company establishment fee and no more than 80€/month for accounting services if you issue 4-5 invoices per month.
+    Cost means two things: a) How much is the fee they demand to establish the company for you and b) how much is their monthly fee for handling your company's "books". The "establishment" fee varies from 600€ to 1500€. The monthly "book holding" varies from around 60€ to 150€. To my experience you shouldn't pay more than 700€ for the one-time company establishment fee and no more than 80€/month for accounting services (if you issue 4-5 invoices per month).
   #####Location
     Although it's possible to setup the company entirely without ever stepping foot on Bulgarian soil, I wouldn't advise you to go down that road. The reason being, you have to give a full-administrative proxy to your "agent" and as you can understand this may come with some risks. You may be willing to take those. I wasn't.
-    So you'll need to get your foot on Bulgarian soil. And you have to do that for three times in total so that's why you have to choose a Bulgarian city that is most convenient for you to visit. Most prominent choices:
+
+    So... you'll need to get your foot on Bulgarian soil. And you'll have to do that for three times in total so that's why you'll have to choose a Bulgarian city that is most convenient for you to visit. Most prominent choices:
 
     - Sofia. Five-six hour drive from Thessaloniki. Three hour flight.
     - Petrich. 1h 40min drive from Thessaloniki. No airport.
@@ -48,13 +44,13 @@ It's simpler and cost effective. And if you're in the services business it's the
      3. Collect your E-banking token and debit cards
 
    #####Communication
-    We're developers and we're used to conduct business over the internet. So in your quest of finding your "agent" ask them if they're familiar conducting business over the Internet. How you will be sending them invoices, how you will communicate with them when and if needed etc. Fortunately, most of the "agencies" are quite modernized but always ask details and make sure they can comply with your style. Not to mention they should be at least fluent in English language. Most of them, at least in the southern region (Petrich, Belgoevgrad) also speak Greek. Some of them are even native Greeks. The latter, in most cases are also certified accountants in Greece. This can be helpful if you want consultation on how to handle delicate things regarding taxation and money transfering from your Bulgarian account to a Greek account or any other complicated issue.
-    #####Legitimacy
+    We're developers and we're used to conduct business over the internet. So in your quest of finding your "agent" ask them if they're familiar conducting business over the Internet. How you will be sending them invoices, how you will communicate with them when and if needed etc. Most of the agents, at least in the southern region (Petrich, Belgoevgrad), also speak Greek. Some of them are even native Greeks. The latter, in most cases are also certified accountants in Greece. This can be helpful if you want consultation on how to handle delicate things regarding taxation and money transfers from your Bulgarian account to a Greek account or any other complicated issue.
+#####Legitimacy
     Bulgarians are not very famous for their honesty. But again, neither are Greeks. So be careful which "agent" you will decide to do business with, whether he be Bulgarian or Greek. Although I've never heard of any extreme incidents of fishy things happening it's always good to play safe with such things. It's your business we're talking about.
 
-    Your best bet is to go for someone who was referred to you. But still, make a personal meeting with him and decide if he conveys trust for yourself. I feel confident referring someone to you, feel free to contact me.
+    Your best bet is to go for someone who was referred to you. But still, make a personal meeting with him and decide if he conveys trust for yourself.
 
-2. ####Before your first visit to Bulgaria
+2. ####Before your first visit to Bulgaria. Pick up a nice company name!
 
     After you find your trusted "agent", you will need to send him two things (by email):
     - The name of your Bulgarian company you want to establish.
@@ -67,8 +63,8 @@ It's simpler and cost effective. And if you're in the services business it's the
     *Skip this paragraph if you go there by plane or bus.*
 
     Driving to Bulgaria from Thessaloniki is a dead-easy, toll-free 132km distance. You take the E79 to Serres, take a left to Sidirokastro and a few minutes later you are at the border crossing at GPP-Kulata. From there on:
-    - Have your identification card with you. Border patrol usually just take a glimpse of it and let you pass no questions asked.
-    - From that point onwards, you switch your car lights on and *always* drive anywhere with them on.
+    - Have your identification card with you. Border patrol usually just take a glimpse of it and let you pass, no questions asked.
+    - From that point onwards, you switch your car lights on and **always** drive anywhere with them on.
     - Upon entering Bulgaria you'll need to buy a Vignette sticker and stick it on your windshield. They normally cost 5 euro and last for 7 days. You can buy a Vignette from a little shop on the right, 200m after the border crossing or any gas-station. Most Vignette sellers will try to rip another 2€-3€ from you if they find you're a first-comer from Greece.
 
     <br>A few minutes later you're at your "agency's" office and ready to roll. One of the people working there will jump on your car and you will drive to the nearest bank to deposit your company's founding capital. This is normally around 100-250€ which you can withdraw when the company is fully established. The bank to which you'll deposit this money is usually the one with the lowest cost of opening and account and not necessarily the bank you will conduct business with. The only thing you'll need to do at the bank is show your ID to the clerk. Your agency will do the talking. More on banks later.
@@ -79,18 +75,18 @@ It's simpler and cost effective. And if you're in the services business it's the
 
     In less than 10 days, your agent will call you to let you know that your company has been established. You'll then have to drive to Bulgaria again and visit your "agent's" office who will happily hand you over your company's official stamp! At this point your company will be an officially registered Bulgarian legal entity and your VAT will be valid and listed (people will be able to verify it via online tools etc). You're essentially ready to conduct business! But wait, you need bank accounts!
 
-    Banks in Bulgaria have some extra costs:
+    Banks in Bulgaria have some extra costs compared to Greek banks:
     - You pay a monthly fee **per account** for "account maintainance", usually in the 7€-15€ range.
     - There might be fees for cross-border money wirings. Some have none. Some have 0.1%.
     - They have fees and commissions for money withdrawal from ATMs abroad (2.5€ to 3.5€ fee. 1.5% to 3.5% commission). More on why that matters later.
 
-    <br>According to your needs you need to research which bank best suits your needs. This is something that you have to do. It's not your agent's job although he might be able to consult you appropriately according to your business. Unicredit is one of the "safest" ones. FiBank is one of the cheapest ones. You will also need to research whether the bank has a branch in your chosen location because you'll need to be physically present there. Two times. (FiBank and Unicredit are both available in Petrich). I'd also suggest not to go for a Greek-Bulgarian bank (Postbank/Eurobank, Pireus etc) the reason being that you don't want anything to do with the Greek banking system for various reasons I am not going to mention but you might be smart enough to figure out.
+    <br>According to your needs you'll need to research which bank best suits your needs. Unicredit is one of the "safest" ones. FiBank is one of the cheapest ones. You will also need to research whether the bank has a branch in your chosen location because you'll need to be physically present there. Two times. (FiBank and Unicredit are both available in Petrich). I'd also suggest not to go for a Greek-Bulgarian bank (Postbank/Eurobank, Pireus etc) the reason being that you don't want anything to do with the Greek banking system for various reasons I am not going to mention but you might be smart enough to figure out.
 
     Back to procedure. Your "agent's" assistant again escorts you to the bank you deposited your founding capital. You close your account there and withdraw the founding capital. Then you go to your bank of choice with your "agent's" assistant and open your company accounts and apply for your e-banking account.
 
     You will need two accounts:
     - USD or EUR account for making business with companies in the US or EU, according to what suits you better.
-    - A BGN (Bulgary's currency) you will use to pay your taxes and any other expenses might ocassinally arise.
+    - A BGN (Bulgary's currency) you will use to pay your taxes and any other expenses might ocassionally arise.
 
     <br>You might want to deposit your founding capital split into these accounts. The bank will withdraw the "maintainance fees"
     each month so each account needs to always have some money in it.
@@ -108,8 +104,8 @@ It's simpler and cost effective. And if you're in the services business it's the
 
 ### Operating your business
 
-#### **DISCLAIMER**
+##### **DISCLAIMER**
 
 ***
-** This is a purely educational document. I am not directly advising anyone to close his business in Greece and relocate to Bulgaria or anywhere else. I do not bear any responsibility for any inaccuracies in this document or any consequences that may arise by following it's advice. ALWAYS consult your attorney prior to any actions. Opinions solely my own. **
+ *This is a purely educational document. I am not directly advising anyone to close his business in Greece and relocate to Bulgaria or anywhere else. I do not bear any responsibility for any inaccuracies in this document or any consequences that may arise by following it's advice. ALWAYS consult your attorney prior to any actions. Opinions solely my own.*
 ***
