--- a/_posts/2015-8-22-How-to-BG.md
+++ b/_posts/2015-8-22-How-to-BG.md
@@ -33,7 +33,7 @@ It's simpler and cost effective. And if you're in the services business it's the
 
     So... you'll need to get your foot on Bulgarian soil. And you'll have to do that for three times in total so that's why you'll have to choose a Bulgarian city that is most convenient for you to visit. Most prominent choices:
 
-    - Sofia. Five-six hour drive from Thessaloniki. Three hour flight.
+    - Sofia. ~Four hour drive from Thessaloniki. ~30 mins flight.
     - Petrich. 1h 40min drive from Thessaloniki. No airport.
     - Sandanski. 2h drive from Thessaloniki. No airport.
     - Blagoevgrad. ~3h drive from Thessaloniki. No airport.
@@ -46,7 +46,7 @@ It's simpler and cost effective. And if you're in the services business it's the
    #####Communication
     We're developers and we're used to conduct business over the internet. So in your quest of finding your "agent" ask them if they're familiar conducting business over the Internet. How you will be sending them invoices, how you will communicate with them when and if needed etc. Most of the agents, at least in the southern region (Petrich, Belgoevgrad), also speak Greek. Some of them are even native Greeks. The latter, in most cases are also certified accountants in Greece. This can be helpful if you want consultation on how to handle delicate things regarding taxation and money transfers from your Bulgarian account to a Greek account or any other complicated issue.
 #####Legitimacy
-    Bulgarians are not very famous for their honesty. But again, neither are Greeks. So be careful which "agent" you will decide to do business with, whether he be Bulgarian or Greek. Although I've never heard of any extreme incidents of fishy things happening it's always good to play safe with such things. It's your business we're talking about.
+    Most say that Bulgarians are not very famous for their honesty. But again, I say, neither are Greeks. So be careful which "agent" you will decide to do business with, whether he be Bulgarian or Greek. Although I've never heard of any extreme incidents of fishy things happening it's always good to play safe with such things. It's your business we're talking about.
 
     Your best bet is to go for someone who was referred to you. But still, make a personal meeting with him and decide if he conveys trust for yourself.
 
